--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -5,6 +5,7 @@
       <%= link_to "ブログを作成する", new_blog_path, class: 'btn btn-default' %>
     <% @blogs.each do |blog| %>
     <div class="row">
+       <p><%= current_user.name %></p>
       <h4><strong><%= blog.title %></strong></h4>
       <p><%= blog.content %></p>
       <%= link_to "編集", edit_blog_path(blog.id), class: 'btn btn-default btn-sm btn-success' %>
@@ -12,7 +13,7 @@
     </div>
     <% end %>
   </div>
-      <div id="page-top-btn2" class="page-top-btn2">
-    <p><a class="move-page-top2" id="move-page-top2">▲</a></p>
+      <div id="page-top-btn2" class="page-top-btn">
+    <p><a class="move-page-top2" id="move-page-top">▲</a></p>
 
 </div>
