--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,6 +1,7 @@
 
 <section class="main-header">
-  <img src="<%= asset_path "achieve.png"%>">
+  <p class="flash"><%= notice %><%= alert %></p>
+  <img src="<%= asset_path "achieve.png" %>">
 </section>
 <section class="about">
   <h1>About Achieve</h1>
@@ -45,5 +46,5 @@
     </div>
     <div id="page-top-btn" class="page-top-btn">
     <p><a class="move-page-top" id="move-page-top">▲</a></p>
-</div>
+    </div>
   </section>
