--- a/app/views/poems/index.html.erb
+++ b/app/views/poems/index.html.erb
@@ -1,7 +1,7 @@
 <h4>ポエム一覧</h4>
 
 <% @poems.each do |poem| %>
-  <%= poem.title %>
-  <%= poem.content %>
+  <p>タイトル:<%= poem.title %></p>
+  <p>内容:<%= poem.content %></p>
   <%= link_to "詳細", poem %>
 <% end %>
