--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,8 +50,8 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><%= link_to "ブログ", blogs_path %></li>
-              #<li><%= link_to "お問い合せ", contacts_path%></li>
-              #<li><%= link_to "ポエム(Her)", herpoems_path %></li>
+              <li><%= link_to "お問い合せ", contacts_path%></li>
+              <!--<li><%= link_to "ポエム(Her)", herpoems_path %></li>-->
             </ul>
           </li>
           <% if user_signed_in? %>
