--- a/app/views/poems/index.html.erb
+++ b/app/views/poems/index.html.erb
@@ -3,5 +3,5 @@
 <% @poems.each do |poem| %>
   <p>タイトル:<%= poem.title %></p>
   <p>内容:<%= poem.content %></p>
-  <p><%= link_to '詳細'　, poem_path(poem.id)%></P>
+  <p><%= link_to '詳細', poem_path(poem.id)%></p>
 <% end %>
