--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -5,8 +5,8 @@
       <%= link_to "ブログを作成する", new_blog_path, class: 'btn btn-default' %>
     <% @blogs.each do |blog| %>
     <div class="row">
-      
-      <p><%= profile_img(blog.user) %></p>
+
+      <p><%= profile_img(blog.user) size: '50x50'%></p>
       <%= blog.user.name %>
       <h4><strong><%= blog.title %></strong></h4>
       <p><%= blog.content %></p>
