--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -6,7 +6,7 @@
     <% @blogs.each do |blog| %>
     <div class="row">
 
-      <p><%= profile_img(blog.user), size: '50x50' %></p>
+      <p><%= profile_img(blog.user) %></p>
       <%= blog.user.name %>
       <h4><strong><%= blog.title %></strong></h4>
       <p><%= blog.content %></p>
