--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -14,6 +14,6 @@
     <%= f.text_field :content, placeholder: "内容", class: "form-control"  %>
   </div>
   <div class="actions">
-    <%= f.submit, class: 'btn btn-default' %>
+    <%= f.submit '投稿', class: 'btn btn-primary btn-block'  %>
   </div>
 <% end %>
