--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <div class="row">
   <h2>ユーザー</h2>
   <% @users.each do |user| %>
       <div class="container-child col-md-2 col-sm-4 col-xs-6 ">
@@ -8,4 +9,5 @@
       </div>
       <%= render 'follow_form', user: user %>
   <% end %>
+ </div>
 </div>
