--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,10 +4,12 @@
   <% @users.each do |user| %>
       <div class="container-child col-md-2 col-sm-4 col-xs-6 ">
         <%= profile_img(user) %>
+        <%= linke_to user_path(user) do %>
+          <%= user.name%>
+        <% end %>
         <%= user.email %>
         <%= render 'follow_form', user: user %>
       </div>
-      <%= render 'follow_form', user: user %>
   <% end %>
  </div>
 </div>
