--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src="https://js.pusher.com/4.0/pusher.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Achieve</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <% if user_signed_in? %>
+    <script>
+      var pusher = new Pusher('<%= ENV["PUSHER_KEY"] %>',{
+        encrypted: true
+        cluster: 'ap1',
+      });
+
+      var channel = pusher.subscribe("user_<%= current_user.id %>_channel");
+      channel.bind('comment_created', function(data) {
+        alert(data.message);
+      });
+      channel.bind('notification_created', function(data) {
+        $('#unread_count').html(data.unread_counts);
+      });
+    </script>
+  <% end %>
 </head>
 <body>
 <header>
@@ -69,6 +86,9 @@
 </header>
 <%= yield %>
 
+<%= link_to  notifications_index_path, class: "navbar-brand" do %>
+  <i class="fa fa-bell fa-1x"><span id="unread_count"><%= @notifications_count %></span></i>
+<% end %>
   <footer>
     <p>運営会社DIVE INTO CODE株式会社</p>
     <p>© 2015-2016 Copyright DIVE INTO CODE Corp.</p>
