--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,14 +1,20 @@
-<h2>お知らせ</h2>
-<ul>
-  <% @notifications.each do |notification| %>
-  <hr>
-    <li>
+<div class="container">
+ <div class="wrapper col-md-8 col-md-offset-2 col-sm-10">
+  <h2>お知らせ</h2>
+   <div class="row">
+   <ul>
+    <% @notifications.each do |notification| %>
+    <hr>
+     <li>
       <span><%= notification.read %></span>
       <p>
         <%= notification.comment.user.try(:name) %>さんが
         あなたのブログ（<%= link_to "#{notification.comment.blog.title}", blog_path(notification.comment.blog, notification_id: notification.id) %>）にコメントしました。
       </p>
       <p><%= notification.created_at %></p>
-    </li>
-  <% end %>
-</ul>
+     </li>
+    <% end %>
+   </ul>
+  </div>
+ </div>
+</div>
