--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,20 +1,37 @@
 <div class="container">
  <div class="wrapper col-md-8 col-md-offset-2 col-sm-10">
+
   <h2>お知らせ</h2>
-   <div class="row">
-   <ul>
     <% @notifications.each do |notification| %>
-    <hr>
-     <li>
-      <span><%= notification.read %></span>
-      <p>
-        <%= notification.comment.user.try(:name) %>さんが
-        あなたのブログ（<%= link_to "#{notification.comment.blog.title}", blog_path(notification.comment.blog, notification_id: notification.id) %>）にコメントしました。
-      </p>
-      <p><%= notification.created_at %></p>
-     </li>
+      <% if notification.read == true %>
+        <div class="row">
+         <div class="col" id="col7">
+           <p class="img3"><%= profile_img(notification.comment.user,"blogs") if profile_img(notification.comment.user,"blogs") %></p>
+         </div>
+
+         <div class="col" id="col8">
+           既読
+             <p>
+               <%= notification.comment.user.try(:name) %>さんがあなたのブログ (<%= link_to "#{notification.comment.blog.title}", blog_path(notification.comment.blog, notification_id: notification.id) %>) にコメントしました。
+             </p>
+             <p><%= notification.created_at %></p>
+          </div>
+         </div>
+        <% else %>
+          <div class="row" id="aliceblue">
+           <div class="col" id="col7">
+             <p class="img3"><%= profile_img(notification.comment.user,"blogs") if profile_img(notification.comment.user,"blogs") %></p>
+           </div>
+
+           <div class="col" id="col8">
+             未読
+               <p>
+                 <%= notification.comment.user.try(:name) %>さんがあなたのブログ (<%= link_to "#{notification.comment.blog.title}", blog_path(notification.comment.blog, notification_id: notification.id) %>) にコメントしました。
+               </p>
+               <p><%= notification.created_at %></p>
+            </div>
+           </div>
+         <% end %>
     <% end %>
-   </ul>
-  </div>
  </div>
 </div>
